<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.battle.BattleActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerPlayer1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/green_50"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/imgPlayer1"
                android:layout_width="172dp"
                android:layout_height="143dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/imgPlayer1"
                tools:src="@drawable/bulbasur"/>

            <TextView
                android:id="@+id/txtPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPlayer1"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/bulbasur"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerPlayer2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/purple_200"
            app:layout_constraintTop_toBottomOf="@id/containerPlayer1"
            tools:layout_editor_absoluteX="30dp">


            <ImageView
                android:id="@+id/imgPlayer2"
                android:layout_width="165dp"
                android:layout_height="142dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/imgPlayer2"
                tools:src="@drawable/cubone"/>

            <TextView
                android:id="@+id/txtPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/imgPlayer2"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/cubone"
                android:textColor="@color/grey"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imgVersus"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:contentDescription="@string/imgVersus"
        android:src="@drawable/versus"
        app:layout_constraintBottom_toBottomOf="@+id/containerPlayers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/lblInfo"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerPlayers"
        app:layout_constraintVertical_bias="0.244" />

    <Button
        android:id="@+id/btnStartBattle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStartBattle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>